src/test/ui/parser/issues/issue-5806.stderr
error: couldn't read $DIR/../parser: $ACCESS_DENIED_MSG (os error $ACCESS_DENIED_CODE)
  --> $DIR/issue-5806.rs:5:1
   |
LL | mod foo;
   | ^^^^^^^^

error: aborting due to previous error

